--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     },
     "homepage": "https://github.com/Rishabhltfb/rishabh-sharma-full-stack-engineer-3Feb2022-backend#readme",
     "dependencies": {
-        "express": "^4.17.2"
+        "dotenv": "^16.0.0",
+        "express": "^4.17.2",
+        "morgan": "^1.10.0",
+        "winston": "^3.5.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.14",
         "nodemon": "^2.0.15",
         "ts-node": "^10.4.0",
