--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "dotenv": "^16.0.0",
         "express": "^4.17.2",
+        "express-async-handler": "^1.1.4",
         "mongoose": "^5.13.7",
         "morgan": "^1.10.0",
         "winston": "^3.5.1"
