--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "prestart": "npm run build",
         "start": "node dist/app.js",
         "dev": "nodemon src/app.ts",
         "build": "tsc -p ."
